[gd_scene load_steps=9 format=3 uid="uid://cj0756elngnxk"]

[ext_resource type="Script" path="res://scripts/Mission.gd" id="1_axrgl"]
[ext_resource type="Texture2D" uid="uid://ccl4upmm5ydyq" path="res://assets/image/objets/asset_matraque.png" id="2_rwxyn"]
[ext_resource type="Texture2D" uid="uid://bnxrva1hkjlmt" path="res://assets/image/objets/asset_matraque_selected.png" id="3_p7qn3"]
[ext_resource type="Texture2D" uid="uid://lp4578e0nwe8" path="res://assets/image/objets/asset_matraque_highlight.png" id="4_a5oax"]
[ext_resource type="FontFile" uid="uid://bljsefjqpqjky" path="res://assets/fonts/HelveticaNeueLTStd-BdCn.otf" id="5_o01h5"]
[ext_resource type="FontFile" uid="uid://dxeilsm25aor8" path="res://assets/fonts/HelveticaNeueLTStd-BdCnO.otf" id="6_55ayo"]
[ext_resource type="FontFile" uid="uid://syui48ek4700" path="res://assets/fonts/HelveticaNeueLTStd-BlkCnO.otf" id="7_l8oob"]
[ext_resource type="FontFile" uid="uid://c3oe6o8j3s472" path="res://assets/fonts/HelveticaNeueLTStd-BlkCn.otf" id="8_gaijh"]

[node name="ObjTract" type="Node2D"]
z_index = 130
script = ExtResource("1_axrgl")

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -95.0
offset_right = 165.0
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(165, 95)
texture_normal = ExtResource("2_rwxyn")
texture_pressed = ExtResource("3_p7qn3")
texture_hover = ExtResource("4_a5oax")
ignore_texture_size = true
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="MissionText" type="MarginContainer" parent="."]
z_index = 230
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -145.0
offset_top = -200.0
offset_right = 145.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect2" type="ColorRect" parent="MissionText"]
layout_mode = 2
color = Color(0.890196, 0.266667, 0.145098, 1)

[node name="MarginContainer3" type="MarginContainer" parent="MissionText"]
layout_mode = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="ColorRect" type="ColorRect" parent="MissionText/MarginContainer3"]
layout_mode = 2
color = Color(0.960784, 0.921569, 0.898039, 1)

[node name="MarginContainerText" type="MarginContainer" parent="MissionText"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Label" type="RichTextLabel" parent="MissionText/MarginContainerText"]
layout_mode = 2
theme_override_colors/default_color = Color(0.298039, 0.356863, 0.627451, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/normal_font = ExtResource("5_o01h5")
theme_override_fonts/italics_font = ExtResource("6_55ayo")
theme_override_fonts/bold_italics_font = ExtResource("7_l8oob")
theme_override_fonts/bold_font = ExtResource("8_gaijh")
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
